# tiger-compiler

./: .gitignore  .gitlab-ci.yml  .info  AUTHORS  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  changelog.md  output.out  test.out
scripts/: grade.sh  gradelab1.sh  register.py
scripts/lab5_test/: client.py  debugger.py  instruction.py  interpreter.py  main.py  state_table.py  type.py
src/straightline/: prog1.cc  prog1.h  slp.cc  slp.h  test_slp.cc
src/tiger/absyn/: absyn.cc  absyn.h
src/tiger/canon/: canon.cc  canon.h
src/tiger/codegen/: assem.cc  assem.h  codegen.cc  codegen.h
src/tiger/env/: env.cc  env.h
src/tiger/errormsg/: errormsg.cc  errormsg.h
src/tiger/escape/: escape.cc  escape.h
src/tiger/frame/: frame.h  temp.cc  temp.h  x64frame.cc  x64frame.h
src/tiger/lex/: scanner.h  tiger.lex
src/tiger/liveness/: flowgraph.cc  flowgraph.h  liveness.cc  liveness.h
src/tiger/main/: main.cc  test_codegen.cc  test_lex.cc  test_parse.cc  test_semant.cc  test_translate.cc
src/tiger/output/: logger.h  outout.cc  output.cc  output.h
src/tiger/parse/: parser.h  parser.ih  tiger.y
src/tiger/regalloc/: color.cc  color.h  regalloc.cc  regalloc.h
src/tiger/runtime/: runtime.c
src/tiger/semant/: semant.cc  semant.h  types.cc  types.h
src/tiger/symbol/: symbol.cc  symbol.h
src/tiger/translate/: translate.cc  translate.h  tree.cc  tree.h
src/tiger/util/: graph.h  table.h
testdata/backup/testcases/: test.tig  test_extern.tig  test_patch.tig
testdata/lab1/refs/: ref-0.txt  ref-1.txt
testdata/lab2/refs/: test52.out
testdata/lab2/testcases/: test52.tig
testdata/lab3/refs/: merge.out  queens.out  test1.out  test10.out  test12.out  test14.out  test16.out  test17.out  test18.out  test2.out  test20.out  test21.out  test22.out  test23.out  test24.out  test25.out  test27.out  test28.out  test29.out  test3.out  test30.out  test32.out  test33.out  test37.out  test38.out  test40.out  test41.out  test42.out  test43.out  test44.out  test45.out  test46.out  test47.out  test48.out  test49.out  test5.out  test6.out
testdata/lab4/refs/: test50.out
testdata/lab4/testcases/: test50.tig
testdata/lab5or6/refs/: test_array.out  test_patch.out  tree.out
testdata/lab5or6/refs-part1/: bsearch.out  dec2bin.out  merge.out  prime.out  qsort.out  queens.out  tbi.out  test_array.out  test_patch.out  tfact.out  tfo.out  tif.out  tifn.out  tlink.out  trec.out  tree.out  twhi.out
testdata/lab5or6/testcases/: test_array.tig  test_patch.tig  tree.tig  xhd.tig
